--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mern-blog",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon api/index.js",
@@ -12,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.2",
     "nodemon": "^3.1.7"
   }
 }
